--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.9"
+  },
+  "dependencies": {
+    "gsap": "^3.12.2"
   }
 }
