--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
-    "gsap": "^3.12.2"
+    "animate.css": "^4.1.1"
   }
 }
